; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/platform/mtk-mdp/extr_mtk_mdp_vpu.c_mtk_mdp_vpu_register.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/platform/mtk-mdp/extr_mtk_mdp_vpu.c_mtk_mdp_vpu_register.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.platform_device = type { i32 }
%struct.mtk_mdp_dev = type { %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { i32 }

@IPI_MDP = common dso_local global i32 0, align 4
@mtk_mdp_vpu_ipi_handler = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"mdp_vpu\00", align 1
@.str.1 = private unnamed_addr constant [37 x i8] c"vpu_ipi_registration fail status=%d\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mtk_mdp_vpu_register(%struct.platform_device* %0) #0 {
  %2 = alloca %struct.platform_device*, align 8
  %3 = alloca %struct.mtk_mdp_dev*, align 8
  %4 = alloca i32, align 4
  store %struct.platform_device* %0, %struct.platform_device** %2, align 8
  %5 = load %struct.platform_device*, %struct.platform_device** %2, align 8
  %6 = call %struct.mtk_mdp_dev* @platform_get_drvdata(%struct.platform_device* %5)
  store %struct.mtk_mdp_dev* %6, %struct.mtk_mdp_dev** %3, align 8
  %7 = load %struct.mtk_mdp_dev*, %struct.mtk_mdp_dev** %3, align 8
  %8 = getelementptr inbounds %struct.mtk_mdp_dev, %struct.mtk_mdp_dev* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 8
  %10 = load i32, i32* @IPI_MDP, align 4
  %11 = load i32, i32* @mtk_mdp_vpu_ipi_handler, align 4
  %12 = call i32 @vpu_ipi_register(i32 %9, i32 %10, i32 %11, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i32* null)
  store i32 %12, i32* %4, align 4
  %13 = load i32, i32* %4, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %22

15:                                               ; preds = %1
  %16 = load %struct.mtk_mdp_dev*, %struct.mtk_mdp_dev** %3, align 8
  %17 = getelementptr inbounds %struct.mtk_mdp_dev, %struct.mtk_mdp_dev* %16, i32 0, i32 0
  %18 = load %struct.TYPE_2__*, %struct.TYPE_2__** %17, align 8
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  %20 = load i32, i32* %4, align 4
  %21 = call i32 @dev_err(i32* %19, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str.1, i64 0, i64 0), i32 %20)
  br label %22

22:                                               ; preds = %15, %1
  %23 = load i32, i32* %4, align 4
  ret i32 %23
}

declare dso_local %struct.mtk_mdp_dev* @platform_get_drvdata(%struct.platform_device*) #1

declare dso_local i32 @vpu_ipi_register(i32, i32, i32, i8*, i32*) #1

declare dso_local i32 @dev_err(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
